Add draw, erase, clear and canvas resizing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
         <div id="gridContainer">
             <div id="grid"></div>
         </div>
+        <h2>Canvas width/height: <span id="gridSizeDisplay">8</span> pixels</h2>
+        <input id="gridSize" type="number">
+        <button id ="draw">Draw</button>
+        <button id="erase">Erase</button>
+        <button id="clearCanvas">Clear canvas</button>
     </body>
     <script src="javascript.js"></script>
 </html>
